--- a/page2.html
+++ b/page2.html
@@ -1,13 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="refresh" content="30">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Test Enigma website">
+    <meta name="keywords" content="The Riddler, Enigma, DCVillains">
+    <meta name="author" content="s1gm9">
+    <title>THE ENIGMA</title>
 </head>
-<body>
-    <h>
-        Welcome to page 2
-    </h>
+<body style="background-color: black;">
+    <h1 style="color: greenyellow;">...Continued Edward Nigma (E-NIGMA)</h1>
+    <a>
+        <img src="images/AnimationRiddler.jpeg" height="300">
+    </a>
+    <h2 style="color: greenyellow;"><b>Appointments</b></h2>
+    <table bgcolor="green" width="700">
+        <tr bgcolor="lightgreen">
+            <th width="100">Sunday</th>
+            <th width="100">Monday</th>
+            <th width="100">Tuesday</th >
+            <th width="100">Wednesday</th>
+            <th width="100">Thursday</th>
+            <th width="100">Friday</th>
+            <th width="100">Saturday</th>
+        </tr>
+        <tr bgcolor="lightgrey" align="center">
+            <td>Penguin</td>
+            <td>Joker</td>
+            <td>Two Face</td>
+            <td>Baby Face</td>
+            <td>Batman</td>
+            <td>Dave</td>
+            <td>Gordon</td>
+        </tr> 
+    </table>
+    <br>
+    <br>
+    <iframe style="border: 0;" src="ad.html" width="500" height="100"></iframe>
+    <br>
+    <br>
+    <h2><span style="color: greenyellow;">Enigma</span> <span style="color: white;">Website Form</span></h2>
+    <form>
+        <p style="color: white;">A form for all <span style="color: greenyellow;">Enigma</span> <span style="color: yellow;">fans</span></p>
+        <div>
+            <label for="fname" style="color: yellow;">first name:</label>
+            <input type="text" id="fname" name="fname" placeholder="Edward">
+        </div>
+        <br>
+        <div>
+            <label for="lname" style="color: yellow;">last name:</label>
+            <input type="text" id="lname" name="lname" placeholder="Nigma">
+        </div>
+        <br>
+        <input type="submit">
+    </form>
+    <br>
+    <br>
+    <a href="index.html" target="_self" title="go to previous page">
+        <button style="background-color: black; color: greenyellow;border-radius: 5px;">Previous</button>
+    </a>
 </body>
 </html>
