--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="30">
+    <meta http-equiv="refresh" content="221">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Test Enigma website">
@@ -36,24 +36,83 @@
         </tr> 
     </table>
     <br>
+    <audio controls autoplay loop muted>
+        <source src="audios/21_savage_all_the_smoke_official_music_video_aac_31485.m4a">
+        <source src="audios/21_savage_all_the_smoke_official_music_video_aac_31485.mp3">
+        Unsupported: HTML5 audio
+    </audio>
     <br>
     <iframe style="border: 0;" src="ad.html" width="500" height="100"></iframe>
     <br>
     <br>
     <h2><span style="color: greenyellow;">Enigma</span> <span style="color: white;">Website Form</span></h2>
-    <form>
-        <p style="color: white;">A form for all <span style="color: greenyellow;">Enigma</span> <span style="color: yellow;">fans</span></p>
+    <form action="action_page.php" method="post">
+        <p style="color: white;">A form for all <span style="color: greenyellow;">Enigma</span> <span style="color: yellow;">fans and haters</span></p>
         <div>
-            <label for="fname" style="color: yellow;">first name:</label>
-            <input type="text" id="fname" name="fname" placeholder="Edward">
+            <label for="fname" style="color: yellow;"><span style="color: greenyellow;">Riddler Fan</span> first name:</label>
+            <input type="text" id="fname" name="fname" placeholder="Edward" required>
         </div>
         <br>
         <div>
-            <label for="lname" style="color: yellow;">last name:</label>
-            <input type="text" id="lname" name="lname" placeholder="Nigma">
+            <label for="lname" style="color: yellow;"><span style="color: greenyellow;">Riddler Fan</span> last name:</label>
+            <input type="text" id="lname" name="lname" placeholder="Nigma" required>
         </div>
         <br>
-        <input type="submit">
+        <div>
+            <label for="pass" style="color: yellow;"><span style="color: greenyellow;">Input a</span> password:</label>
+            <input type="password" id="pass" name="pass" maxlength="25" placeholder="password" required>
+        </div>
+        <br>
+        <div>
+            <label for="phone" style="color: yellow;"><span style="color: greenyellow;">Input a</span> phone #:</label>
+            <input type="tel" id="phone" name="phone" placeholder="+254-xxx-xxx-xxx">
+        </div>
+        <br>
+        <div>
+            <label for="email" style="color: yellow;">email:</label>
+            <input type="email" id="email" name="email " placeholder="e.g enigma@gmail.com" required>
+        </div>
+        <br>
+        <div>
+            <label for="bdate" style="color: yellow;">birthdate:</label>
+            <input type="date" id="bdate" name="bdate">
+        </div>
+        <br>
+        <div>
+            <label for="quantity" style="color: yellow;">Number of <span style="color: greenyellow;">solved</span> riddles on previous page:</label>
+            <input type="number" id="quantity" name="quantity" min="0" max="10" value="0" required>
+        </div>
+        <br>
+        <div>
+            <label for="title" style="color: yellow;">Which title does Enigma go by?</label>
+
+            <label for="Sir" style="color: yellow;">Sir</label>
+            <input type="radio" id="Sir" name="title" value="Sir">
+
+            <label for="Madam" style="color: yellow;">Madam</label>
+            <input type="radio" id="Madam" name="title" value="Madam">
+        </div>
+        <br>
+        <div>
+            <label for="occupation" style="color: yellow;">Enigma's occupation:</label>
+            <select id="occupation" name="occupation">
+                <option value="SuperHero">SuperHero</option>
+                <option value="SuperVillain">SuperVillain</option>
+            </select>
+        </div>
+        <br>
+        <p style="color: white;">I am a</p>
+        <div>
+            <label for="HaterNot" style="color: yellow;">Hater</label>
+            <input type="checkbox" id="Hater" name="Hater">
+
+            <label for="Fan" style="color: yellow;">Fan</label>
+            <input type="checkbox" id="Fan" name="Fan">
+        </div>
+        <br>
+        <input type="reset" style="background-color: grey; color: greenyellow;">
+        <br>
+        <input type="submit" style="background-color: grey; color: greenyellow;">
     </form>
     <br>
     <br>
