a few more changes

--- a/page2.html
+++ b/page2.html
@@ -96,6 +96,7 @@
         <div>
             <label for="occupation" style="color: yellow;">Enigma's occupation:</label>
             <select id="occupation" name="occupation">
+                <option value="default">Occupations</option>
                 <option value="SuperHero">SuperHero</option>
                 <option value="SuperVillain">SuperVillain</option>
             </select>
