slightly more changes

--- a/page2.html
+++ b/page2.html
@@ -27,12 +27,12 @@
         </tr>
         <tr bgcolor="lightgrey" align="center">
             <td>Penguin</td>
-            <td>Joker</td>
+            <td>Poison Ivy</td>
             <td>Two Face</td>
+            <td>Cat Woman</td>
             <td>Baby Face</td>
-            <td>Batman</td>
-            <td>Dave</td>
-            <td>Gordon</td>
+            <td>Joker</td>
+            <td>Clay Face</td>
         </tr> 
     </table>
     <br>
